[package]
name = "witx-docgen"
version = "0.1.3"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
keywords = ["webassembly", "wasm", "witx", "doc"]
categories = ["wasm"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-witx-docgen"
repository = "https://github.com/jedisct1/rust-witx-docgen"
description = "CLI tool to generate documentation from a WITX file."

[dependencies]
clap = "2"
witx = "0.8.7"
