[package]
name = "witx-docgen"
version = "0.2.0"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
keywords = ["webassembly", "wasm", "witx", "doc"]
categories = ["wasm"]
license = "MIT"
homepage = "https://github.com/jedisct1/rust-witx-docgen"
repository = "https://github.com/jedisct1/rust-witx-docgen"
description = "CLI tool to generate documentation from a WITX file."

[dependencies]
clap = "4"
witx = "0.9.0"
